# aoc2022

./: .editorconfig  .python-version  README.md  aoc  pyproject.toml
src/lib/: util.py
src/solutions/day1/: a.py  b.py
src/solutions/day2/: a.py  b.py
src/solutions/day3/: a.py  b.py
src/solutions/day4/: a.py  b.py
src/solutions/day5/: a.py  b.py
src/solutions/day6/: a.py  b.py
src/solutions/day7/: a.py  b.py
