[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["emilia <emilia@hakke.ro>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.991"
isort = "^5.10.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
