[tool.poetry]
authors = ["emilia <emilia@hakke.ro>"]
description = "Advent of Code 2022"
license = "MIT"
name = "aoc2022"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^6.0.0"
isort = "^5.10.1"
mypy = "^0.991"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"
